feat: implement authentication
- Introduce AuthController that handles user login, logout and me actions
- enable sanctum as default authentication method
